--- a/src/pages/list/index.html
+++ b/src/pages/list/index.html
@@ -26,7 +26,25 @@
     <script>
         // Simulação de dados (substitua pelos dados reais do seu aplicativo)
         const lista = [
-            { nome: "João Puta Puta Puta Puta Puta Puta", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
+            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
             { nome: "Maria Puta Puta Puta Puta Puta", cpf: "222.222.222-22", birthDate: "02/02/1995" },
             // Adicione mais dados conforme necessário
         ];
@@ -43,15 +61,17 @@
                 row.insertCell().textContent = item.birthDate;
 
                 const actionsCell = row.insertCell();
-                const deleteButton = document.createElement('button');
-                deleteButton.textContent = 'Excluir';
-                deleteButton.addEventListener('click', () => deleteRow(item));
-                actionsCell.appendChild(deleteButton);
-
+                
                 const editButton = document.createElement('button');
                 editButton.textContent = 'Editar';
                 editButton.addEventListener('click', () => editRow(item));
                 actionsCell.appendChild(editButton);
+
+                const deleteButton = document.createElement('button');
+                deleteButton.textContent = 'Excluir';
+                deleteButton.classList.add('deleteButton');
+                deleteButton.addEventListener('click', () => deleteRow(item));
+                actionsCell.appendChild(deleteButton);
             });
         }
 
