--- a/src/pages/list/index.html
+++ b/src/pages/list/index.html
@@ -23,74 +23,6 @@
         </tbody>
     </table>
 
-    <script>
-        // Simulação de dados (substitua pelos dados reais do seu aplicativo)
-        const lista = [
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "João", cpf: "111.111.111-11", birthDate: "01/01/1990" },
-            { nome: "Maria Puta Puta Puta Puta Puta", cpf: "222.222.222-22", birthDate: "02/02/1995" },
-            // Adicione mais dados conforme necessário
-        ];
-
-        // Função para exibir os dados na tabela
-        function displayData() {
-            const tableBody = document.getElementById('tableBody');
-            tableBody.innerHTML = ''; // Limpa a tabela antes de adicionar os dados
-
-            lista.forEach(item => {
-                const row = tableBody.insertRow();
-                row.insertCell().textContent = item.nome;
-                row.insertCell().textContent = item.cpf;
-                row.insertCell().textContent = item.birthDate;
-
-                const actionsCell = row.insertCell();
-                
-                const editButton = document.createElement('button');
-                editButton.textContent = 'Editar';
-                editButton.addEventListener('click', () => editRow(item));
-                actionsCell.appendChild(editButton);
-
-                const deleteButton = document.createElement('button');
-                deleteButton.textContent = 'Excluir';
-                deleteButton.classList.add('deleteButton');
-                deleteButton.addEventListener('click', () => deleteRow(item));
-                actionsCell.appendChild(deleteButton);
-            });
-        }
-
-        // Função para excluir uma linha
-        function deleteRow(item) {
-            const index = lista.indexOf(item);
-            if (index !== -1) {
-                lista.splice(index, 1);
-                displayData();
-            }
-        }
-
-        // Função para editar uma linha (substitua por sua lógica de edição)
-        function editRow(item) {
-            console.log(`Editar: ${item.nome}, CPF: ${item.cpf}, Nascimento: ${item.birthDate}`);
-        }
-
-        // Exibir dados iniciais
-        displayData();
-    </script>
+    <script src="./index.js"></script>
 </body>
 </html>
