--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -38,16 +38,18 @@
             <div class="group" style="height: 60%;">
                 <div class="content" style="width: 40%;">
                     <h2>Adicionar um item à lista</h2>
+                    <p class="hidden" style="color: red; margin: 0;" id="alert">*Preencha todos os campos</p>
                     <label for="name">Nome</label>
                     <input type="text" id="name" placeholder="Nome">
                     <label for="cpf">CPF</label>
                     <input type="text" id="cpf" placeholder="CPF">
                     <label for="birthdate">Data de nascimento</label>
-                    <input type="date" id="birthdate" placeholder="Data de nascimento">
+                    <input type="text" id="birthdate" placeholder="Data de nascimento">
                     <button class="btn" id="btnAdd">Adicionar</button>
                 </div>
                 <div class="content" style="width: 60%;">
                     <h2>Adicionar vários itens</h2>
+                    <p class="hidden" style="color: red; margin: 0;" id="alertMany">*Preencha corretamente</p>
                     <p>*Modelo: Nome CPF DD/MM/AAAA<br>*Exemplo: João da Silva 123.456.789-10 01/01/2000<br>*Separe os
                         itens por quebra de linha (ENTER)</p>
                     <textarea id="names" placeholder="Nomes"></textarea>
