create docx for all in the list

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -13,7 +13,7 @@
             <h1 class="title">Electron Certificades</h1>
             <div class="group">
                 <button class="btn" id="btnWord">Gerar certificado WORD</button>
-                <button class="btn" id="btnPPTX">Gerar certificado PPTX</button>
+                <button class="btn" id="btnPptx">Gerar certificado PPTX</button>
             </div>
             <div class="group">
                 <button class="btn" id="btnList" style="height: 40%;">Ver lista</button>
