style/alerts&errors

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <div class="content" style="width: 60%;">
                     <h2>Adicionar vários itens</h2>
-                    <p class="hidden" style="color: red; margin: 0;" id="alertMany">*Preencha corretamente</p>
+                    <p class="hidden" style="color: rgb(240, 52, 52); margin: 0;" id="alertMany"></p>
                     <p>*Modelo: Nome CPF DD/MM/AAAA<br>*Exemplo: João da Silva 123.456.789-10 01/01/2000<br>*Separe os
                         itens por quebra de linha (ENTER)</p>
                     <textarea id="names" placeholder="Nomes"></textarea>
