--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Electron Certificade</title>
+    <title>Electron Certificate</title>
     <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 
 <body>
     <div class="container">
         <div class="content">
-            <h1 class="title">Electron Certificades</h1>
+            <h1 class="title">Electron Certificate</h1>
             <div class="group">
                 <button class="btn" id="btnWord">Gerar certificado WORD</button>
                 <button class="btn" id="btnPptx">Gerar certificado PPTX</button>
