--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -15,7 +15,7 @@
             <h1 class="title">Electron Certificate</h1>
             <div class="group">
                 <div>
-                    <button class="btn" id="btnWord">Gerar certificado WORD</button>
+                    <button class="btn" id="btnWord">Gerar certificados <strong>Word</strong></button>
                     <div class="fileContainer">
                         <p style="margin: 2%;">Modelo word:</p>
                         <label for="wordTemplate" class="inputFile" id="wordLabel"></label>
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div>
-                    <button class="btn" id="btnPptx">Gerar certificado PPTX</button>
+                    <button class="btn" id="btnPptx">Gerar certificados <strong>PowerPoint</strong></button>
                     <div class="fileContainer">
                         <p style="margin: 2%;">Modelo powerpoint:</p>
                         <label for="pptxTemplate" class="inputFile" id="pptxLabel"></label>
@@ -34,6 +34,10 @@
             <div class="group">
                 <button class="btn" id="btnList">Ver lista</button>
                 <button class="btn" id="btnClear">Limpar lista</button>
+                <button class="btn" id="btnShowWordFiles">Mostrar arquivos word</button>
+                <button class="btn" id="btnShowPptxFiles">Mostrar arquivos powerpoint</button>
+                <button class="btn" id="btnShowPdfFromWordFiles">Mostrar arquivos pdf (word)</button>
+                <button class="btn" id="btnShowPdfFromPptxFiles">Mostrar arquivos pdf (powerpoint)</button>
             </div>
             <div class="group" style="height: 60%;">
                 <div class="content" style="width: 40%;">
