--- a/src/pages/list/index.html
+++ b/src/pages/list/index.html
@@ -11,10 +11,12 @@
     
     <table>
         <thead>
-            <tr>
+            <tr id="tableHeader">
                 <th>Nome</th>
                 <th>CPF</th>
                 <th>Data de Nascimento</th>
+                <th class="hidden" id="telColumn">Telefone</th>
+                <th class="hidden" id="emailColumn">Email</th>
                 <th>Ações</th>
             </tr>
         </thead>
