table generate button

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -30,6 +30,14 @@
                         <input type="file" class="hidden" id="pptxTemplate" accept=".pptx">
                     </div>
                 </div>
+                <div>
+                    <button class="btn" id="btnTable">Gerar <strong>Atestado</strong></button>
+                    <div class="fileContainer">
+                        <p style="margin: 2%;">Modelo atestado:</p>
+                        <label for="tableTemplate" class="inputFile" id="tableLabel"></label>
+                        <input type="file" class="hidden" id="tableTemplate" accept=".docx">
+                    </div>
+                </div>
             </div>
             <div class="group">
                 <button class="btn" id="btnList">Ver lista</button>
