--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -30,7 +30,7 @@
                         <input type="file" class="hidden" id="pptxTemplate" accept=".pptx">
                     </div>
                 </div>
-                <div>
+                <div id="tableContainer">
                     <button class="btn" id="btnTable">Gerar <strong>Atestado</strong></button>
                     <div class="fileContainer">
                         <p style="margin: 2%;">Modelo atestado:</p>
@@ -40,12 +40,12 @@
                 </div>
             </div>
             <div class="group">
+                <button class="btn" id="btnShowWordFiles">Mostrar arquivos word</button>
+                <button class="btn" id="btnShowPdfFromWordFiles">Mostrar arquivos pdf (word)</button>
                 <button class="btn" id="btnList">Ver lista</button>
                 <button class="btn" id="btnClear">Limpar lista</button>
-                <button class="btn" id="btnShowWordFiles">Mostrar arquivos word</button>
-                <button class="btn" id="btnShowPptxFiles">Mostrar arquivos powerpoint</button>
-                <button class="btn" id="btnShowPdfFromWordFiles">Mostrar arquivos pdf (word)</button>
                 <button class="btn" id="btnShowPdfFromPptxFiles">Mostrar arquivos pdf (powerpoint)</button>
+                <button class="btn" id="btnShowPptxFiles">Mostrar arquivos powerpoint</button>
             </div>
             <div class="group" style="height: 60%;">
                 <div class="content" style="width: 40%;">
@@ -57,6 +57,10 @@
                     <input type="text" id="cpf" placeholder="CPF">
                     <label for="birthdate">Data de nascimento</label>
                     <input type="text" id="birthdate" placeholder="Data de nascimento">
+                    <label for="phone" id="phoneTitle">Telefone</label>
+                    <input type="text" id="phone" placeholder="Telefone">
+                    <label for="email" id="emailTitle">E-mail</label>
+                    <input type="text" id="email" placeholder="E-mail">
                     <button class="btn" id="btnAdd">Adicionar</button>
                 </div>
                 <div class="content" style="width: 60%;">
