--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -9,10 +9,15 @@
 <body>
     <div class="container">
         <div class="fileNameContainer">
-            <p style="margin: 0;">Modelo de nome do Arquivo<br></p>
+            <p style="margin: 0;" class="title-config">Modelo de nome dos Arquivos<br></p>
             <p style="margin: 0;">Modelo atual: <strong id="fileNameLabel" style="color: aqua;"></strong></p>
             <input type="text" id="fileNameInput">
             <button class="btn" id="btnFileName">Salvar</button>
+        </div>
+        <div class="liga-desliga">
+            <p class="title-config">Ativar geração de atestado</p>
+            <input type="checkbox" class="liga-desliga_checkbox" id="liga-desliga">
+            <label for="liga-desliga" class="liga-desliga_botao"></label>
         </div>
     </div>
     <script src="./index.js"></script>
