table files icon

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -40,12 +40,13 @@
                 </div>
             </div>
             <div class="group">
-                <button class="btn" id="btnShowWordFiles">Mostrar arquivos word</button>
-                <button class="btn" id="btnShowPdfFromWordFiles">Mostrar arquivos pdf (word)</button>
+                <img class="imgsBtn" src="../../imgs/word_button.png" id="btnShowWordFiles">
+                <img class="imgsBtn" src="../../imgs/pdf_word_button.png" id="btnShowPdfFromWordFiles">
                 <button class="btn" id="btnList">Ver lista</button>
                 <button class="btn" id="btnClear">Limpar lista</button>
-                <button class="btn" id="btnShowPdfFromPptxFiles">Mostrar arquivos pdf (powerpoint)</button>
-                <button class="btn" id="btnShowPptxFiles">Mostrar arquivos powerpoint</button>
+                <img class="imgsBtn" src="../../imgs/ppx_pdf_button.png" id="btnShowPdfFromPptxFiles">
+                <img class="imgsBtn" src="../../imgs/ppx_button.png" id="btnShowPptxFiles">;
+                <img class="imgsBtn" src="../../imgs/atestado.png" id="btnShowTableFiles">
             </div>
             <div class="group" style="height: 60%;">
                 <div class="content" style="width: 40%;">
