--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="fileNameContainer">
-            <p style="margin: 0;" class="title-config">Modelo de nome dos Arquivos<br></p>
+            <p style="margin: 0;" class="title-config">Modelo de nome dos Certificados<br></p>
             <p style="margin: 0;">Modelo atual: <strong id="fileNameLabel" style="color: aqua;"></strong></p>
             <input type="text" id="fileNameInput">
             <button class="btn" id="btnFileName">Salvar</button>
