--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -21,8 +21,7 @@
             <div class="group">
                 <img class="imgsBtn" src="../../imgs/word_button.png" id="btnShowWordFiles">
                 <img class="imgsBtn" src="../../imgs/pdf_word_button.png" id="btnShowPdfFromWordFiles">
-                <button class="btn" id="btnList">Ver lista</button>
-                <button class="btn" id="btnClear">Limpar lista</button>
+                <button class="btn" id="btnList">Ver lista de nomes</button>
                 <img class="imgsBtn" src="../../imgs/ppx_pdf_button.png" id="btnShowPdfFromPptxFiles">
                 <img class="imgsBtn" src="../../imgs/ppx_button.png" id="btnShowPptxFiles">;
                 <img class="imgsBtn" src="../../imgs/atestado.png" id="btnShowTableFiles">
