to uppercase/lowercase buttons

--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -49,7 +49,12 @@
                         01/01/2000<br>*Separe os
                         itens por quebra de linha (ENTER)</p>
                     <textarea id="names" placeholder="Nomes"></textarea>
-                    <button class="btn" id="btnAddMany">Adicionar</button>
+                    <div class="btnsTextArea">
+                        <button class="btn" id="btnUppercase">Maiúsculas</button>
+                        <button class="btn" id="btnAddMany">Adicionar</button>
+                        <button class="btn" id="btnLowercase">minúsculas</button>
+                    </div>
+
                 </div>
             </div>
         </div>
