--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -23,7 +23,7 @@
                 <img class="imgsBtn" src="../../imgs/pdf_word_button.png" id="btnShowPdfFromWordFiles">
                 <button class="btn" id="btnList">Ver lista de nomes</button>
                 <img class="imgsBtn" src="../../imgs/ppx_pdf_button.png" id="btnShowPdfFromPptxFiles">
-                <img class="imgsBtn" src="../../imgs/ppx_button.png" id="btnShowPptxFiles">;
+                <img class="imgsBtn" src="../../imgs/ppx_button.png" id="btnShowPptxFiles">
                 <img class="imgsBtn" src="../../imgs/atestado.png" id="btnShowTableFiles">
             </div>
             <div class="group" style="height: 60%;">
