--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -45,9 +45,7 @@
                 <div class="content" style="width: 60%;">
                     <h2>Adicionar vários itens</h2>
                     <p class="hidden" style="color: rgb(240, 52, 52); margin: 0;" id="alertMany"></p>
-                    <p id="example">*Modelo: Nome CPF DD/MM/AAAA<br>*Exemplo: João da Silva 123.456.789-10
-                        01/01/2000<br>*Separe os
-                        itens por quebra de linha (ENTER)</p>
+                    <p id="example"></p>
                     <textarea id="names" placeholder="Nomes"></textarea>
                     <div class="btnsTextArea">
                         <button class="btn" id="btnUppercase">Maiúsculas</button>
