--- a/src/pages/options/index.html
+++ b/src/pages/options/index.html
@@ -49,6 +49,9 @@
                 <input type="file" class="hidden" id="tableTemplate" accept=".docx">
             </div>
         </div>
+        <div class="btnsFree">
+            <button class="btn" id="btnSetVar">Definição de variáveis</button>
+        </div>
     </div>
     <script src="./index.js"></script>
 </body>
