masks on config

--- a/src/pages/setVar/index.html
+++ b/src/pages/setVar/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="var-group">
             <label for="hourInput" class="title-input">Carga horária</label>
-            <input type="text" id="hourInput">
+            <input type="number" id="hourInput">
         </div>
         <div class="var-group">
             <label for="companyInput" class="title-input">Empresa</label>
