--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <p class="poweredby">Developed by Renan Maitan</p>
         <div class="content">
             <i class="fa fa-cog config-icon" id="btnOptions"></i>
             <h1 class="title">Electron Certificate</h1>
