moved birthDate to table version

--- a/src/pages/editItem/index.html
+++ b/src/pages/editItem/index.html
@@ -13,7 +13,7 @@
         <div class="form">
             <input type="text" name="name" id="name" placeholder="Nome">
             <input type="text" name="cpf" id="cpf" placeholder="CPF">
-            <input type="text" name="birthDate" id="birthDate" placeholder="Data de Nascimento">
+            <input type="text" name="birthDate" id="birthDate" placeholder="Data de Nascimento" class="hidden">
             <input type="text" name="phone" id="phone" placeholder="Telefone" class="hidden">
             <input type="text" name="email" id="email" placeholder="E-mail" class="hidden">
             <button class="btn" id="btnSave">Salvar</button>
