--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -35,7 +35,7 @@
                     <input type="text" id="name" placeholder="Nome">
                     <label for="cpf">CPF</label>
                     <input type="text" id="cpf" placeholder="CPF">
-                    <label for="birthdate">Data de nascimento</label>
+                    <label for="birthdate" id="birthDateTitle">Data de nascimento</label>
                     <input type="text" id="birthdate" placeholder="Data de nascimento">
                     <label for="phone" id="phoneTitle">Telefone</label>
                     <input type="text" id="phone" placeholder="Telefone">
